--- a/css/style.css
+++ b/css/style.css
@@ -49,6 +49,10 @@ p{
   padding-bottom: 10%;
 }
 
+.col-1-5 img:hover{
+  opacity: 0.5;
+}
+
 .col-6-10{
   width: 20%;
   float: left;
@@ -58,6 +62,9 @@ p{
   width: 70%;
   height: 40%;
   padding-top: 10%;
+}
+.col-6-10 img:hover{
+  opacity: 0.5;
 }
 
 header li{
@@ -106,7 +113,7 @@ header nav{
 }
 
 .modal-content{
-  background-color: #f4f4f4;
+  background-color: #FFFFE0;
   margin: 10% auto;
   padding: 20px;
   width: 40%;
@@ -176,7 +183,132 @@ header nav{
   cursor: pointer;
 }
 
+.tab {
+  overflow: hidden;
+  background-color: #ffdc82;
+}
+
+.tab button {
+  background-color: inherit;
+  float: left;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  padding: 14px 16px;
+  transition: 0.3s;
+}
+
+.tab button:hover {
+  background-color: #FFFFE0;
+}
+
+.tab button.active {
+  background-color: #FFFFE0;
+}
+
+.tab-content {
+  display: none;
+  padding: 6px 12px;
+  border: 1px solid #ccc;
+  background: #FFFFE0;
+  border-top: none;
+  animation: tabFade 0.25s;
+}
+
+.tab-content h2{
+  background: #FFFFE0;
+}
+
+.popcornColumn{
+  float: left;
+  width: 10%;
+  padding: 5px;
+  margin-left: 10%;
+  text-align: center;
+  font-size: x-large;
+}
+
+.popcornRow::after{
+  content:"";
+  clear: both;
+  display: table;
+}
+
+.addBtn{
+  background-color:#ffdc82;
+  border: 0;
+  height: 20px;
+}
+
+.addBtn:hover{
+  background-color:#9c9c5d;
+}
+
+.quantity{
+  display: inline;
+}
+
+.tri-left{
+  display: block;
+  float:left;
+  width: 0;
+	height: 0;
+	border-top: 15px solid transparent;
+	border-right: 30px solid #555;
+	border-bottom: 15px solid transparent;
+}
+
+.tri-left:hover{
+  border-right: 30px solid #000;
+}
+
+.tri-right{
+  display:block;
+  float: right;
+  width: 0;
+	height: 0;
+	border-top: 15px solid transparent;
+	border-left: 30px solid #555;
+	border-bottom: 15px solid transparent;
+}
+
+.tri-right:hover{
+  border-left: 30px solid #000;
+}
+
+.qtyCount{
+  border: black 1px solid;
+  background: white;
+  padding: 4px;
+}
+
+#concNext{
+  float:right;
+  margin-right: 2%;
+}
+
+#concBack{
+  float:left;
+  margin-left: 2%;
+}
+
+.concBtns{
+  background-color: #ffdc82;
+  border: 0;
+  height: 30px;
+  width: 10%;
+}
+
+.concBtns:hover{
+  background-color: #9c9c5d;
+}
+
 @keyframes modalOpen{
   from{opacity: 0;}
+  to{opacity: 1;}
+}
+
+@keyframes tabFade{
+  from{opacity:0;}
   to{opacity: 1;}
 }
