--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,7 @@ header{
   padding-top: 30px;
   min-height: 70px;
   border-bottom: #fac575 3px solid;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 ul{
@@ -25,17 +26,37 @@ a{
 h2{
   background: #ffdc82;
   padding: 0.25px 0.25px 0.25px 0.25px;
+  font-family: Arial, Helvetica, sans-serif;
   font-size: 30px;
   margin-left: 0%;
 }
 
+h3{
+  font-family: Arial, Helvetica, sans-serif;
+}
 
+span{
+  font-family: Arial, Helvetica, sans-serif;
+}
 
 p{
   background: #ffdc82;
+  font-family: Arial, Helvetica, sans-serif;
   color: #ffdc82;
 }
 
+#blankYellow{
+  color:#ffdc82 ;
+}
+
+#mainPoster{
+  opacity: 1;
+  cursor: pointer;
+}
+
+#mainPoster:hover{
+  opacity: 0.5;
+}
 
 .col-1-5{
   width: 20%;
@@ -46,7 +67,10 @@ p{
 .col-1-5 img{
   width: 70%;
   height: 40%;
+  margin-left: 12%;
   padding-bottom: 10%;
+  opacity:0.7;
+  cursor: not-allowed;
 }
 
 .col-1-5 img:hover{
@@ -61,10 +85,129 @@ p{
 .col-6-10 img{
   width: 70%;
   height: 40%;
+  margin-left: 12%;
   padding-top: 10%;
+  padding-bottom: 10%;
+  opacity: 0.7;
+  cursor: not-allowed;
 }
 .col-6-10 img:hover{
   opacity: 0.5;
+}
+
+.SSButton{
+  background-color: #fcfc47;
+  border: black 1.5px solid;
+  height: 40px;
+  width: 10%;
+  font-size: x-large;
+}
+
+.SSButton:hover{
+  background-color: #9c9c5d;
+  border: black 1.5px solid;
+}
+
+#backBtn{
+  float:left;
+  margin-left: 50px;
+  margin-bottom: 50px;
+  
+}
+
+#continueBtn{
+  margin-right: 50px;
+  float:right;
+  
+}
+
+#showtime{
+  margin-left:40%;
+  padding: 0;
+}
+
+h2 p{
+  color: black;
+}
+
+#selected{
+  
+  float: right;
+  margin-right: 35px;
+}
+
+.selectedTitle{
+  float: right;
+  margin-right: 10px;
+}
+
+.contain{
+  display: flex;
+  justify-content: center;
+}
+
+#poster{
+  width: 120%;
+  height: 85%;
+  float: left;
+  margin-left: 50px;
+  margin-top: 50px;
+  padding:0;
+}
+
+.grid-container {
+    display: grid;
+    float: right;
+    width: 90%;
+    color: black;
+    padding: 5% 0% 0% 50%;
+    margin-right: 50px;
+    margin-bottom: 50px;
+    grid-template-columns: auto auto auto auto auto auto auto auto;
+  }
+
+
+  .grid-item{
+    background-color: white;
+    border: black 0.25px solid;
+    text-align: center;
+    font-size: x-large;
+    line-height: 400%;
+  }
+
+  .grid-item:hover{
+    background-color: grey;
+  }
+
+  .grid-item:focus{
+    background-color: #008000;
+  }
+
+
+.movieTitle{
+  font-family: Arial, Helvetica, sans-serif;
+  display: block;
+  margin-left: 30%;
+  font-size: large;
+}
+
+#blank{
+  color:grey;
+}
+#swNH{
+  margin-left: 20%;
+}
+
+#gg2{
+  margin-left: 15%;
+}
+
+#solo{
+  margin-left: 22%;
+}
+
+#jaws{
+  margin-left: 40%;
 }
 
 header li{
@@ -301,6 +444,113 @@ header nav{
 
 .concBtns:hover{
   background-color: #9c9c5d;
+}
+
+.yourOrder{
+  background-color:#FFFFE0 ;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: x-large;
+  padding: 1.5%;
+}
+
+.content-window{
+  background-color:#FFFFE0 ;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: xx-large;
+  padding: 1.5%;
+}
+
+.chkoutRow1{
+  background-color:#FFFFE0 ;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: Large;
+  font-weight: 900;
+}
+
+.chkoutCol{
+  text-align: center;
+  float: left;
+  margin-top: 1%;
+  width: 19%;
+}
+
+.chkoutRow1::after{
+  content: "";
+  display: table;
+  clear: both;
+
+}
+.aboutRow1{
+  background-color:#FFFFE0 ;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: Large;
+  font-weight: 900;
+}
+
+#msg{
+  text-align: end;
+  margin-left: 35%;
+}
+
+.aboutCol{
+  text-align: center;
+  float: left;
+  margin-top: 1%;
+  width: 30%;
+}
+
+.aboutRow1::after{
+  content: "";
+  display: table;
+  clear: both;
+}
+
+#location{
+  margin-left: 27%;
+  height: auto;
+  width: 90%;
+}
+
+#note{
+  font-size: small;
+}
+
+.finalCol{
+  text-align: center;
+}
+
+#chkoutPoster{
+  display: inline-block;
+  vertical-align: top;
+  height: auto;
+  width: 20%;
+  margin-left: 10%;
+}
+
+#chkoutTitle{
+display: inline-block;
+  vertical-align: top;
+}
+
+#edit{
+  float:left;
+  margin-left: 0.5%;
+}
+
+#lightBlank{
+  background-color: #FFFFE0;
+}
+
+#subTotal{
+  float: right;
+}
+
+#totalPriceFin{
+  border-top: black 2px solid;
+}
+
+#email:hover{
+  color: #b38307;
 }
 
 @keyframes modalOpen{
