--- a/css/style.css
+++ b/css/style.css
@@ -289,6 +289,37 @@ header nav{
   width: 35%;
 }
 
+.modal-row{
+  margin-left: 1%;
+  margin-top: 0;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: medium;
+  font-weight: 900;
+}
+
+.modal-row::after{
+  content: "";
+  display: table;
+  clear: both;
+}
+
+.modal-col{
+  text-align: center;
+  float: left;
+  margin-top: 1%;
+  margin-left: 0;
+  width: 49%;
+}
+
+#modalPoster{
+  width: 75%;
+  height: auto;
+}
+
+.modalTitle{
+  font-size: large;
+}
+
 .timeSelect{
   background-color: #ffdc82;
   padding: 1em 2em;
